reactor : modify test code